Added Multiple Resources

--- a/_forms/talks_form.html
+++ b/_forms/talks_form.html
@@ -106,7 +106,7 @@ destination_layout: talk
           "title: "+topic+"\n"+
           "category: "+category+"\n"+
           "locus: "+locus+"\n"+
-          "resource_links: "+((resources.concat(resources_slides)).concat(resources_papers)).toString()+"\n"+
+          "resource_links: "+(resources.concat(resources_slides)).toString()+"\n"+
           "talk_by: "+t+"\n"+
           "date: "+dates+"\n"+
           "tagged_projects: "+res_topics.toString()+"\n"+
