--- a/_forms/publication_form.html
+++ b/_forms/publication_form.html
@@ -200,14 +200,9 @@ destination_layout: publication
         add(e, inside)
       }
   
-      function remove(array, element) {
-        const index = array.indexOf(element);
-        array.splice(index, 1);
-      }
-  
       window[samp_func] = function(item){
         if(people_checked.includes(item.id)){
-          remove(people_checked,item)
+          arrayRemove(people_checked,item)
         }
         else{
           people_checked.push(String(item.id))
