--- a/_forms/project_form.html
+++ b/_forms/project_form.html
@@ -59,11 +59,16 @@ destination_layout: project
 </form>
 </div>
 <script>
+  var isLoaded = false
 window.onload = function() {
   if(!window.location.hash) {
-    window.location = window.location + '#loaded';
     window.location.reload();
-    document.getElementById("after_submission").innerHTML = '<svg version="1.1" xmlns="http://www.w3.org/2000/svg"\
+    window.location.reload();
+    window.location = window.location + '#loaded';
+  }
+  while(!isLoaded){
+      //Prone
+      document.getElementById("after_submission").innerHTML = '<svg version="1.1" xmlns="http://www.w3.org/2000/svg"\
       xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="25 25 50 50" id = "loader">\
       <circle cx="50" cy="50" r="20" fill="none" stroke-width="5" stroke="#67b0d1" stroke-linecap="round" stroke-dashoffset="0" stroke-dasharray="100, 200">\
       <animateTransform attributeName="transform" attributeType="XML" type="rotate" from="0 50 50" to="360 50 50" dur="2.5s" repeatCount="indefinite"/>\
@@ -71,7 +76,7 @@ window.onload = function() {
       <animate attributeName="stroke-dasharray" values="0,200;110,200;110,200" dur="1.25s" repeatCount="indefinite"/>\
       </circle>\
       </svg>'
-    window.location.reload();
+      //End Prone
   }
 }
 let saveFile = () => {
@@ -201,9 +206,11 @@ function getdata(file){
       var obj = $(result).find('script');
       var page1X = $(result).find('div.myData').data('x');
       if(page1X != null){
+        isLoaded = true
         sessionStorage.setItem(file, page1X);
       }
       else{
+        isLoaded = false
         window.location.reload();
       }
   });
