--- a/_forms/publication_form.html
+++ b/_forms/publication_form.html
@@ -296,11 +296,9 @@ alert("Please enter a firstname and / or lastname")
         var obj = $(result).find('script');
         var page1X = $(result).find('div.myData').data('x');
         while(page1X == null){
+          console.log(page1X);
           $(document.getElementById("loading")).show();
           $(document.getElementById("after_submission")).hide();
-          window.location.reload();
-        }
-        if(page1X == null){
           window.location.reload();
         }
         $(document.getElementById("loading")).hide();
