--- a/_forms/publication_form.html
+++ b/_forms/publication_form.html
@@ -297,13 +297,13 @@ alert("Please enter a firstname and / or lastname")
         var page1X = $(result).find('div.myData').data('x');
         if(page1X == null){
           console.log(page1X);
-          $(document.getElementById("loading")).show();
-          $(document.getElementById("after_submission")).hide();
+          (document.getElementById("loading")).style.display = "block";
+          (document.getElementById("after_submission")).style.display = "none";
           window.location.reload();
         }
         else{
-          $(document.getElementById("loading")).hide();
-          $(document.getElementById("after_submission")).show();
+          (document.getElementById("loading")).style.display = "none";;
+          (document.getElementById("after_submission")).style.display = "show";
           sessionStorage.setItem(file, page1X);
         }
     });
